Fixed bug in checkout button where it would overlap the add to cart button.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1492,6 +1492,7 @@ hr {
         }
         .btn {
             border: 2px solid lighten(@color-swatch5,15%);
+            display: block;
             width: 70%;
             margin: 2.5em 0 0;
             @media @tablet {
@@ -1530,6 +1531,10 @@ hr {
                     background-image: none;
                     color: @color-swatch2;
                 }
+            }
+            &.ecom-product-go-to-checkout-btn {
+                margin-top: 1.5em;
+                text-align: center;
             }
             &:hover {
                 border: 2px solid @color-swatch5;
